usfm_parser/tests/snapshots/tcdocs__advanced_header.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id MRK 41MRKGNT92.SFM, Good News Translation, June 2003\n\\h John\n\\toc1 The Gospel according to John\n\\toc2 John\n\\mt2 The Gospel\n\\mt3 according to\n\\mt1 JOHN\n\\ip The two endings to the Gospel, which are enclosed in brackets, are regarded as written by someone other than the author of \\bk Mark\\bk*\n\\iot Outline of Contents\n\\io1 The beginning of the gospel \\ior (1.1-13)\\ior*\n\\io1 Jesus' public ministry in Galilee \\ior (1.14–9.50)\\ior*\n\\io1 From Galilee to Jerusalem \\ior (10.1-52)\\ior*\n\\c 1\n\\ms BOOK ONE\n\\mr (Psalms 1–41)\n\\p\n\\v 1 the first verse\n\\v 2 the second verse"
---
Book MRK "41MRKGNT92.SFM, Good News Translation, June 2003" @0..56
Para h@57..65
  Text "John"@60..65
Para toc1@65..100
  Text "The Gospel according to John"@71..100
Para toc2@100..111
  Text "John"@106..111
Para mt2@111..127
  Text "The Gospel"@116..127
Para mt3@127..145
  Text "according to"@132..145
Para mt1@145..155
  Text "JOHN"@150..155
Para ip@155..295
  Text "The two endings to the Gospel, which are enclosed in brackets, are regarded as written by someone other than the author of "@159..282
  Char bk@282..294
    Text "Mark"@286..290
Para iot@295..320
  Text "Outline of Contents"@300..320
Para io1@320..372
  Text "The beginning of the gospel "@325..353
  Char ior@353..371
    Text "(1.1-13)"@358..366
Para io1@372..435
  Text "Jesus' public ministry in Galilee "@377..411
  Char ior@411..434
    Text "(1.14–9.50)"@416..429
Para io1@435..486
  Text "From Galilee to Jerusalem "@440..466
  Char ior@466..485
    Text "(10.1-52)"@471..480
ChapterStart 1@486..490
Para ms@491..504
  Text "BOOK ONE"@495..504
Para mr@504..524
  Text "(Psalms 1–41)"@508..524
Para p@524..569
  VerseStart 1@527..531
  Text "the first verse"@532..548
  VerseEnd 1
  Text " "
  VerseStart 2@548..552
  Text "the second verse"@553..569
  VerseEnd 2
ChapterEnd 1
