usfm_parser/tests/snapshots/tcdocs__advanced_list.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p\n\\v 1 the first verse\n\\v 2 the second verse\n\\c 2\n\\p\n\\v 1 the third verse\n\\v 2 the fourth verse\n\\s1 Administration of the Tribes of Israel\n\\lh\n\\v 16-22 This is the list of the administrators of the tribes of Israel:\n\\li1 Reuben - Eliezer son of Zichri\n\\li1 Simeon - Shephatiah son of Maacah\n\\li1 Levi - Hashabiah son of Kemuel\n\\lf This was the list of the administrators of the tribes of Israel."
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..59
  VerseStart 1@16..20
  Text "the first verse"@21..37
  VerseEnd 1
  Text " "
  VerseStart 2@37..41
  Text "the second verse"@42..59
  VerseEnd 2
ChapterEnd 1
ChapterStart 2@59..63
Para p@64..110
  VerseStart 1@67..71
  Text "the third verse"@72..88
  VerseEnd 1
  Text " "
  VerseStart 2@88..92
  Text "the fourth verse"@93..110
  VerseEnd 2
Para s1@110..153
  Text "Administration of the Tribes of Israel"@114..153
Para lh@153..230
  VerseStart 16-22@157..165
  Text "This is the list of the administrators of the tribes of Israel:"@166..230
Para li1@230..266
  Text "Reuben - Eliezer son of Zichri"@235..266
Para li1@266..305
  Text "Simeon - Shephatiah son of Maacah"@271..305
Para li1@305..341
  Text "Levi - Hashabiah son of Kemuel"@310..341
Para lf@341..409
  Text "This was the list of the administrators of the tribes of Israel."@345..409
  VerseEnd 16-22
ChapterEnd 2
